add description for rydly project, make the bottom section of the homepage modern and follow googe design pattern

--- a/src/assets/jsons/personal_projects.json
+++ b/src/assets/jsons/personal_projects.json
@@ -77,7 +77,7 @@
 	},
 	{
 		"title": "Rydly",
-		"description": "",
+		"description": "Rydly is a dynamic ride-sharing service that redefines the way users commute, connecting private vehicle owners with individuals sharing similar routes. With Rydly, users can seamlessly carpool, optimizing daily journeys for a more sustainable and cost-effective travel experience.",
 		"image": "/src/assets/website_images/rydly.png",
 		"resource_images": [
 			{
